--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "request": "^2.88.0",
     "rxjs": "^6.3.3",
     "rxjs-compat": "^6.3.3",
+    "tar": "^4.4.8",
     "tslib": "^1.9.0",
     "webpack": "^4.29.3",
     "zone.js": "^0.8.29"
